--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,12 @@ coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+decorator==4.4.2
+torch
+cython
+pandas==1.3.5
+torch_sparse
+torch_scatter
+torch_geometric
+numpy
+networkx
