--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,25 @@ coverage
 flake8
 python-dotenv>=0.5.1
 decorator==4.4.2
-torch
-cython
+contourpy==1.1.0
+cycler==0.11.0
+cython==0.29.35
+decorator==4.4.2
+fonttools==4.40.0
+importlib-resources==5.12.0
+joblib==1.2.0
+kiwisolver==1.4.4
+matplotlib==3.7.1
 pandas==1.3.5
-torch_sparse
-torch_scatter
-torch_geometric
-numpy
-networkx
+pyparsing==3.1.0
+pytz==2023.3
+scikit-learn==1.2.2
+scipy==1.10.1
+threadpoolctl==3.1.0
+torch-cluster==1.6.1+pt20cpu
+torch-geometric==2.3.1
+torch-geometric-temporal==0.54.0
+torch-scatter==2.1.1+pt20cpu
+torch-sparse==0.6.17+pt20cpu
+torch-spline-conv==1.2.2+pt20cpu
+tqdm==4.65.0
